--- a/4.html
+++ b/4.html
@@ -4,7 +4,7 @@
 
 <h2>Play Audio on Button Click</h2>
 
-<audio id="myAudio">
+<audio id="myAudio" controls>
     <source src="sound.mp3" type="audio/mpeg">
 </audio>
 
