--- a/4.html
+++ b/4.html
@@ -6,6 +6,7 @@
 
 <audio id="myAudio" controls>
     <source src="sound.mp3" type="audio/mpeg">
+    cant find audio file
 </audio>
 
 <button onclick="playAudio()">Play</button>
