--- a/4.html
+++ b/4.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<h2>Play Audio on Button Click</h2>
+<h2>Play Audio on Button Click(using javascript)</h2>
 
 <audio id="myAudio" controls>
     <source src="sound.mp3" type="audio/mpeg">
