--- a/1.html
+++ b/1.html
@@ -42,5 +42,30 @@
         <div class="card">Snap 10</div>
     </div>
 
+    <!-- PDF embed examples -->
+    <section style="margin:24px 0;">
+        <h2>Embed PDF (examples)</h2>
+        <p style="margin-top:0">Place a PDF file named <strong>sample.pdf</strong> in this folder or replace the paths/URLs below.</p>
+
+        <h3>Using &lt;iframe&gt;</h3>
+        <div style="border:1px solid #ddd;padding:8px;margin-bottom:12px;">
+            <iframe src="sample.pdf" width="100%" height="600" style="border:0">Your browser does not support PDFs. <a href="sample.pdf">Download the PDF</a>.</iframe>
+        </div>
+
+        <h3>Using &lt;object&gt;</h3>
+        <div style="border:1px solid #ddd;padding:8px;margin-bottom:12px;">
+            <object data="sample.pdf" type="application/pdf" width="100%" height="600">
+                <p>PDF preview not available — <a href="sample.pdf">open or download</a>.</p>
+            </object>
+        </div>
+
+        <h3>Using &lt;embed&gt;</h3>
+        <div style="border:1px solid #ddd;padding:8px;margin-bottom:12px;">
+            <embed src="sample.pdf" type="application/pdf" width="100%" height="600" />
+        </div>
+
+        <p style="font-size:90%">Note: Mobile browsers or some devices may not render embedded PDFs. For consistent, in-page viewing consider using a JavaScript viewer such as <a href="https://mozilla.github.io/pdf.js/" target="_blank">PDF.js</a>.</p>
+    </section>
+
 </body>
 </html>
