--- a/js/1.html
+++ b/js/1.html
@@ -1,4 +1,7 @@
 <html>
+    <head>
+        <title>find the largest number</title>
+    </head>
     <body>
         <input type="text" id="a" placeholder="first number">
         <input type="text" id="b" placeholder="second number">
